fixed menu alignment on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,7 +56,7 @@ html, body {
     border: 0 !important;
     background: transparent !important;
     box-shadow: none !important;
-    text-align: right;
+    text-align: center;
   }
 
   .site-nav .page-link {
